ubiquity (1.3.8) UNRELEASED; urgency=low

  * Depend on python-gtk2 (>= 2.10) for gtk.LinkButton.
  * Move GRUB configuration to a new Advanced... dialog, getting rid of the
    poor UI on the summary page (LP: #63073).
  * Add a popularity-contest participation checkbox to the advanced dialog
    (LP: #55637).

 -- Colin Watson <cjwatson@ubuntu.com>  Wed,  3 Jan 2007 16:16:49 +0000

ubiquity (1.3.7) feisty; urgency=low

  [ Colin Watson ]
  * Remove "Set Time..." button, which is far more trouble than it's worth
    (LP: #49412, #52716, #52717, #73907, #76564). You can adjust the time
    after installation.
  * Fix a silly typo while setting up the resize progress bar (LP: #77523).
  * Don't say "beta version" in the alpha intro message.
  * Move language list box to the left-hand side of its page rather than the
    bottom, on the basis that you have to choose a language before you can
    read the text.
  * Switch to glade-3 (those with branches that modify ubiquity.glade, take
    note).
  * Add special cases to restore correct handling of Chinese and Portuguese
    language codes.
  * If /cdrom/.disk/release_notes_url is present, display a link to the
    release notes on the language page. See doc/README for the format
    (https://blueprints.launchpad.net/ubuntu/+spec/ubiquity-release-notes).
  * Remove no-longer-canonical /distros from Launchpad URLs.
  * Sync up hostname handling with netcfg; it now allows hostnames between 2
    and 63 characters in length, forbids them starting or ending with a
    hyphen, and interprets hostnames containing dots as hostname.domain and
    adjusts /etc/hosts accordingly (LP: #52501, #72909).

  [ Jonathan Riddell ]
  * Port KDE frontend to Qt 4

 -- Colin Watson <cjwatson@ubuntu.com>  Wed,  3 Jan 2007 13:59:25 +0000

ubiquity (1.3.6) feisty; urgency=low

  * Avoid use of super() in components, since it's far too confusing.
  * I managed to create two different PartmanAuto.error() methods by
    mistake. Merge them.