@@ -5,6 +5,8 @@ ubiquity (1.3.8) UNRELEASED; urgency=low
     poor UI on the summary page (LP: #63073).
   * Add a popularity-contest participation checkbox to the advanced dialog
     (LP: #55637).
+  * Reset hostname_edited (so that it will be automatically generated again)
+    if the hostname entry box is emptied.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Wed,  3 Jan 2007 16:16:49 +0000
 
